--- a/session/archerySession.html
+++ b/session/archerySession.html
@@ -10,7 +10,7 @@
 <body>
     <header class="session">
         <span>Pseudo</span>
-        <span>volet n° 5</span>
+        <span>volet 5 sur 20</span>
     </header>
     <div id="blazon" class="target">
         <div id="plus" class="yellow">+</div><!-- + -->
