--- a/connexion/signIn.html
+++ b/connexion/signIn.html
@@ -41,8 +41,10 @@
                     <input type="date" id="birthDate" name="birthDate">
                 </div>
                 <div id="genre">
-                    <input type="radio" name="sexe" value="homme" checked>Homme
-                    <input type="radio" name="sexe" value="femme" >Femme
+                    <span class="genre">Homme</span>
+                    <span class="genre">Femme</span>
+<!--                    <input type="radio" name="sexe" value="homme" checked>Homme-->
+<!--                    <input type="radio" name="sexe" value="femme" >Femme-->
                 </div>
             </fieldset>
 
