--- a/connexion/signIn.html
+++ b/connexion/signIn.html
@@ -41,20 +41,19 @@
                     <input type="date" id="birthDate" name="birthDate">
                 </div>
                 <div id="genre">
-                    <span class="genre">Homme</span>
-                    <span class="genre">Femme</span>
-<!--                    <input type="radio" name="sexe" value="homme" checked>Homme-->
-<!--                    <input type="radio" name="sexe" value="femme" >Femme-->
+                    <span>Homme</span>
+                    <span>Femme</span>
                 </div>
             </fieldset>
 
             <fieldset>
-                <legend>type d'arc & distance</legend>
+                <label for="range">type d'arc</label>
                 <select name="bow" id="bow">
                     <option value="classic">recurve / classic</option>
                     <option value="longbow">longbow</option>
-                    <option value="compound">arc à poulies</option>
+                    <option value="compound">compound / arc à poulies</option>
                 </select>
+                <label for="range">distance</label>
                 <select name="range" id="range">
                     <option value="5">5 m</option>
                     <option value="10">10 m</option>
@@ -68,7 +67,6 @@
                     <a href="../user_profile/hello_user.html">
                         <i class="fas fa-bullseye"></i>
                     </a>
-<!--                </button>-->
             </div>
 
         </form>
