--- a/user_profile/user_profile.html
+++ b/user_profile/user_profile.html
@@ -23,6 +23,19 @@
     <header>
         <h2>Mon profil</h2>
     </header>
+
+    <section id="profile">
+        <div>
+            <h3>Heliosens</h3>
+            <i class="fas fa-venus"></i>
+        </div>
+
+        <span>catégorie :</span>
+        <span>(S2) Senior 2</span>
+        <span>arc recurve</span>
+        <span>distance 18m</span>
+    </section>
+
     <footer>
         <a href="../index.html">
             <i class="fas fa-long-arrow-alt-left"></i>
