--- a/user_profile/user_profile.html
+++ b/user_profile/user_profile.html
@@ -29,11 +29,14 @@
             <h3>Heliosens</h3>
             <i class="fas fa-venus"></i>
         </div>
-
-        <span>catégorie :</span>
-        <span>(S2) Senior 2</span>
-        <span>arc recurve</span>
-        <span>distance 18m</span>
+        <div>
+            <span>catégorie : </span>
+            <span>Senior 2 (S2)</span>
+        </div>
+        <div>
+            <span>arc recurve</span>
+            <span>distance 18m</span>
+        </div>
     </section>
 
     <footer>
