--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     </div>
 
     <header>
-        <h1 id="big">Archery <span>score</span></h1>
+        <h1 id="big">Archery score</h1>
     </header>
 
     <section id="home">
         <a href="connexion/logIn.html">Connexion</a>
         <a href="connexion/signIn.html">Inscription</a>
+        <a href="guest.html">Mode invité</a>
     </section>
 </body>
 </html>
-
-<!-- penser à un mode invité pour deux relevés de points simultanés -->
