setting guest mod

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home">
         <a href="connexion/logIn.html">Connexion</a>
         <a href="connexion/signIn.html">Inscription</a>
-        <a href="guest.html">Mode invité</a>
+        <a href="session/guest.html">Mode invité</a>
     </section>
 </body>
 </html>
