--- a/session/guest.html
+++ b/session/guest.html
@@ -2,17 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Séance de tir</title>
+    <title>Mode invité</title>
     <link rel="stylesheet" href="../style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../img/minTarget.png" />
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="session">
-        <span>Pseudo</span>
-        <span>volet 5 sur 20</span>
-    </header>
-    <div id="blazon" class="target">
+    <div class="background">
+        <div class="yellow">
+            <div id="halfYellow"></div>
+        </div>
+        <div class="red"></div>
+        <div class="blue"></div>
+        <div class="black"></div>
+        <div></div><!-- white -->
+        <div class="chocolate"></div>
+    </div>
+
+    <div class="modal">
+        <div id="number">
+            <header>
+                <h2>Volet n° 8 sur 20</h2>
+            </header>
+            <section class="result">
+                <span>f1</span>
+                <span>f2</span>
+                <span>f3</span>
+                <span id="point">f1 + f2 + f3</span>
+                <span>total : </span>
+            </section>
+        </div>
+    </div>
+
+    <section id="blazon" class="target">
         <div id="plus" class="yellow">+</div><!-- + -->
         <div id="ten" class="yellow">10</div><!-- 10 -->
         <div id="nine" class="yellow">9</div><!-- 9 -->
@@ -25,7 +48,7 @@
         <div id="two" class="white">2</div><!-- 2 -->
         <div id="one" class="white">1</div><!-- 1 -->
         <div id="straw" class="chocolate">0</div><!-- 0 -->
-    </div>
+    </section>
     <footer>
         <a href="../index.html">
             <i class="fas fa-long-arrow-alt-left"></i>
