delete page user logIn signIn

--- a/session/shoot-setting.html
+++ b/session/shoot-setting.html
@@ -25,40 +25,17 @@
     </header>
 
     <section id="shoot">
-        <form action="#" method="get">
-            <fieldset>
-                <label for="range">type d'arc</label>
-                <select name="bow" id="bow">
-                    <option value="classic">recurve / classic</option>
-                    <option value="longbow">longbow</option>
-                    <option value="compound">compound / arc à poulies</option>
-                </select>
-                <input name="viewfinder" type="radio">
-                <label for="range">distance</label>
-                <select name="range" id="range">
-                    <option value="5">5 m</option>
-                    <option value="10">10 m</option>
-                    <option value="18">18 m</option>
-                    <option value="25">25 m</option>
-                </select>
-            </fieldset>
-
-            <div>
-                <label for="diam">diamétre de la cible</label>
-            </div>
-            <select name="diam" id="diam">
-                <option value="80">80 cm</option>
-                <option value="60">60 cm</option>
-                <option value="40">40 cm</option>
-            </select>
-
-            <div id="minTarget">
-                <!--                <button type="submit">-->
-                <a href="archerySession.html">
-                    <i class="fas fa-bullseye"></i>
-                </a>
-            </div>
-        </form>
+        <h2>nombre de tir :</h2>
+        <div>
+            <span>10</span>
+            <span>20</span>
+        </div>
+        <div id="minTarget">
+            <!--                <button type="submit">-->
+            <a href="guest.html">
+                <i class="fas fa-bullseye"></i>
+            </a>
+        </div>
     </section>
 
     <footer>
