--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     </header>
 
     <section id="home">
-        <a href="connexion/logIn.html">Connexion</a>
-        <a href="connexion/signIn.html">Inscription</a>
-        <a href="session/guest.html">Mode invité</a>
+        <a href="session/shoot-setting.html">Mode invité</a>
     </section>
 </body>
 </html>
