--- a/index.html
+++ b/index.html
@@ -7,25 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="img/minTarget.png" />
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <div class="background">
-        <div class="yellow">
-            <div id="halfYellow"></div>
+    <main>
+        <div class="background">
+            <div class="yellow">
+                <div id="halfYellow"></div>
+            </div>
+            <div class="red"></div>
+            <div class="blue"></div>
+            <div class="black"></div>
+            <div></div><!-- white -->
+            <div class="chocolate"></div>
         </div>
-        <div class="red"></div>
-        <div class="blue"></div>
-        <div class="black"></div>
-        <div></div><!-- white -->
-        <div class="chocolate"></div>
-    </div>
 
-    <header>
-        <h1 id="big">Archery score</h1>
-    </header>
+        <header>
+            <h1 id="big">Archery score</h1>
+        </header>
 
-    <section id="home">
-        <a href="session/shoot-setting.html">Mode invité</a>
-    </section>
+        <section class="frame" id="number">
+            <span>Nombre de volet</span>
+            <a href="session/guest.html">10</a>
+            <a href="session/guest.html">20</a>
+        </section>
+    </main>
+    <script src="app.js"></script>
 </body>
 </html>
