--- a/session/guest.html
+++ b/session/guest.html
@@ -9,50 +9,48 @@
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="background">
-        <div class="yellow">
-            <div id="halfYellow"></div>
+    <main>
+        <div class="background">
+            <div class="yellow">
+                <div id="halfYellow"></div>
+            </div>
+            <div class="red"></div>
+            <div class="blue"></div>
+            <div class="black"></div>
+            <div></div><!-- white -->
+            <div class="chocolate"></div>
         </div>
-        <div class="red"></div>
-        <div class="blue"></div>
-        <div class="black"></div>
-        <div></div><!-- white -->
-        <div class="chocolate"></div>
-    </div>
 
-    <div class="modal">
-        <div id="number">
-            <header>
-                <h2>Volet n° 8 sur 20</h2>
-            </header>
-            <section class="result">
-                <span>f1</span>
-                <span>f2</span>
-                <span>f3</span>
-                <span id="point">f1 + f2 + f3</span>
-                <span>total : </span>
+        <div class="modal">
+            <section class="frame">
+                <span>Volet n° 8</span>
+                <div class="result">
+                    <span>10 8 7</span>
+                    <p id="point">26</p>
+                </div>
+                <footer>
+                    <a href="../index.html">
+                        <i class="fas fa-long-arrow-alt-left"></i>
+                    </a>
+                </footer>
             </section>
         </div>
-    </div>
 
-    <section id="blazon" class="target">
-        <div id="plus" class="yellow">+</div><!-- + -->
-        <div id="ten" class="yellow">10</div><!-- 10 -->
-        <div id="nine" class="yellow">9</div><!-- 9 -->
-        <div id="eight" class="red">8</div><!-- 8 -->
-        <div id="seven" class="red">7</div><!-- 7 -->
-        <div id="six" class="blue">6</div><!-- 6 -->
-        <div id="five" class="blue">5</div><!-- 5 -->
-        <div id="four" class="black">4</div><!-- 4 -->
-        <div id="three" class="black">3</div><!-- 3 -->
-        <div id="two" class="white">2</div><!-- 2 -->
-        <div id="one" class="white">1</div><!-- 1 -->
-        <div id="straw" class="chocolate">0</div><!-- 0 -->
-    </section>
-    <footer>
-        <a href="../index.html">
-            <i class="fas fa-long-arrow-alt-left"></i>
-        </a>
-    </footer>
+        <section id="blazon" class="target">
+            <div id="plus" class="yellow">+</div><!-- + -->
+            <div id="ten" class="yellow">10</div><!-- 10 -->
+            <div id="nine" class="yellow">9</div><!-- 9 -->
+            <div id="eight" class="red">8</div><!-- 8 -->
+            <div id="seven" class="red">7</div><!-- 7 -->
+            <div id="six" class="blue">6</div><!-- 6 -->
+            <div id="five" class="blue">5</div><!-- 5 -->
+            <div id="four" class="black">4</div><!-- 4 -->
+            <div id="three" class="black">3</div><!-- 3 -->
+            <div id="two" class="white">2</div><!-- 2 -->
+            <div id="one" class="white">1</div><!-- 1 -->
+            <div id="straw" class="chocolate">0</div><!-- 0 -->
+        </section>
+    </main>
+    <script src="../app.js"></script>
 </body>
 </html>
