--- a/session/guest.html
+++ b/session/guest.html
@@ -26,7 +26,7 @@
                 <span>Volet n° 8</span>
                 <div class="result">
                     <span>10 8 7</span>
-                    <p id="point">26</p>
+                    <span id="point">26 points</span>
                 </div>
                 <footer>
                     <a href="../index.html">
