début des calculs de points

--- a/session/guest.html
+++ b/session/guest.html
@@ -10,20 +10,9 @@
 </head>
 <body>
     <main>
-        <div class="background">
-            <div class="yellow">
-                <div id="halfYellow"></div>
-            </div>
-            <div class="red"></div>
-            <div class="blue"></div>
-            <div class="black"></div>
-            <div></div><!-- white -->
-            <div class="chocolate"></div>
-        </div>
-
         <div class="modal">
             <section class="frame">
-                <span>Volet n° 8</span>
+                <span>Volet n°</span><span>8</span>
                 <div class="result">
                     <span>10 8 7</span>
                     <span id="point">26 points</span>
@@ -36,19 +25,22 @@
             </section>
         </div>
 
-        <section id="blazon" class="target">
-            <div id="plus" class="yellow">+</div><!-- + -->
-            <div id="ten" class="yellow">10</div><!-- 10 -->
-            <div id="nine" class="yellow">9</div><!-- 9 -->
-            <div id="eight" class="red">8</div><!-- 8 -->
-            <div id="seven" class="red">7</div><!-- 7 -->
-            <div id="six" class="blue">6</div><!-- 6 -->
-            <div id="five" class="blue">5</div><!-- 5 -->
-            <div id="four" class="black">4</div><!-- 4 -->
-            <div id="three" class="black">3</div><!-- 3 -->
-            <div id="two" class="white">2</div><!-- 2 -->
-            <div id="one" class="white">1</div><!-- 1 -->
-            <div id="straw" class="chocolate">0</div><!-- 0 -->
+        <section class="target">
+            <div class="chocolate">0</div>
+            <div class="white">1</div>
+            <div class="white">2</div>
+            <div id="three" class="black">3</div>
+            <div class="black">4</div>
+            <div class="blue">5</div>
+            <div class="blue">6</div>
+            <div class="red">7</div>
+            <div class="red">8</div>
+            <div class="yellow">9</div>
+            <div id="ten" class="yellow">
+                <span>10</span>
+                <span id="plus">+</span>
+                <span>10</span>
+            </div>
         </section>
     </main>
     <script src="../app.js"></script>
