work on function

--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
             <div></div><!-- white -->
             <div class="chocolate"></div>
         </div>
+        <div id="container">
+            <header>
+                <h1 id="big">Archery score</h1>
+            </header>
 
-        <header>
-            <h1 id="big">Archery score</h1>
-        </header>
+            <section class="frame" id="number">
+                <span>Nombre de volet</span>
+                <a href="session/guest.html">10</a>
+                <a href="session/guest.html">20</a>
+            </section>
 
-        <section class="frame" id="number">
-            <span>Nombre de volet</span>
-            <a href="session/guest.html">10</a>
-            <a href="session/guest.html">20</a>
-        </section>
+        </div>
     </main>
     <script src="app.js"></script>
 </body>
 </html>
+
