--- a/session/guest.html
+++ b/session/guest.html
@@ -12,15 +12,17 @@
     <main>
         <div class="modal">
             <section class="frame">
-                <span>Volet n°</span><span>8</span>
+                <div>Volet n° <span id="turn"></span></div>
+
                 <div class="result">
-                    <span>10 8 7</span>
-                    <span id="point">26 points</span>
+                    <span id="fly"></span>
+                    <span id="point"></span>
+                    <span id="final"></span>
                 </div>
                 <footer>
-                    <a href="../index.html">
-                        <i class="fas fa-long-arrow-alt-left"></i>
-                    </a>
+                    <a href="guest.html"><i class="fas fa-undo-alt"></i></a>
+
+                    <i class="fas fa-long-arrow-alt-right"></i>
                 </footer>
             </section>
         </div>
