--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <h1 id="big">Archery score</h1>
             </header>
 
-            <section class="frame" id="number">
+            <section class="modal" id="number">
                 <span>Nombre de volet</span>
-                <a href="session/guest.html">10</a>
+<!--                <a href="session/guest.html">10</a>-->
                 <a href="session/guest.html">20</a>
             </section>
 
