--- a/session/guest.html
+++ b/session/guest.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main>
-        <div class="modal">
-            <section class="frame">
+        <div class="fullScreen">
+            <section class="modal">
                 <div>Volet n° <span id="turn"></span></div>
 
                 <div class="result">
