fly to flyNbr, turn to shoot

--- a/session/guest.html
+++ b/session/guest.html
@@ -15,7 +15,7 @@
                 <div>Volet n° <span id="turn"></span></div>
 
                 <div class="result">
-                    <span id="fly"></span>
+                    <span id="flyNbr"></span>
                     <span id="point"></span>
                     <span id="final"></span>
                 </div>
