test if shoot < 8 else last shoot of 3 fly

--- a/session/guest.html
+++ b/session/guest.html
@@ -15,7 +15,7 @@
                 <div>Volet n° <span id="turn"></span></div>
 
                 <div class="result">
-                    <span id="flyNbr"></span>
+                    <span id="flyNbr">0</span>
                     <span id="point"></span>
                     <span id="final"></span>
                 </div>
@@ -40,7 +40,7 @@
             <div class="yellow">9</div>
             <div id="ten" class="yellow">
                 <span>10</span>
-                <span id="plus">+</span>
+                <div id="plus">+</div>
                 <span>10</span>
             </div>
         </section>
