test if shoot = 9 = last shoot = display total score

--- a/session/guest.html
+++ b/session/guest.html
@@ -15,9 +15,10 @@
                 <div>Volet n° <span id="turn"></span></div>
 
                 <div class="result">
-                    <span id="flyNbr">0</span>
-                    <span id="point"></span>
-                    <span id="final"></span>
+                    <p>volet n° <span id="flyNbr">0</span></p>
+                    <p><span id="point"></span></p>
+                    <p><span id="final"></span></p>
+
                 </div>
                 <footer>
                     <a href="guest.html"><i class="fas fa-undo-alt"></i></a>
