modify html to separate 10 and 10+

--- a/session/guest.html
+++ b/session/guest.html
@@ -39,11 +39,8 @@
             <div class="red">7</div>
             <div class="red">8</div>
             <div class="yellow">9</div>
-            <div id="ten" class="yellow">
-                <span>10</span>
-                <div id="plus">+</div>
-                <span>10</span>
-            </div>
+            <div id="ten" class="yellow">10</div>
+            <div id="plus">+</div>
 
         </section>
     </main>
