run for 9 shoot = 3 fly

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </header>
 
             <section class="modal" id="number">
-                <span>Nombre de volet</span>
-<!--                <a href="session/guest.html">10</a>-->
+                <span id="userChoice">Nombre de volet</span>
+                <a href="session/guest.html">10</a>
                 <a href="session/guest.html">20</a>
             </section>
 
