--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </header>
 
             <section class="modal" id="number">
-                <span id="userChoice">Nombre de volet</span>
+                <span>Nombre de volet</span>
                 <a href="session/guest.html">10</a>
                 <a href="session/guest.html">20</a>
             </section>
