--- a/session/guest.html
+++ b/session/guest.html
@@ -39,7 +39,10 @@
             <div class="red">7</div>
             <div class="red">8</div>
             <div class="yellow">9</div>
-            <div id="ten" class="yellow">10</div>
+            <div id="ten" class="yellow">
+                <span>10</span>
+                <span>10</span>
+            </div>
             <div id="plus">+</div>
 
         </section>
