--- a/index.html
+++ b/index.html
@@ -10,29 +10,56 @@
 
 </head>
 <body>
-    <main>
-        <div class="background">
-            <div class="yellow">
-                <div id="halfYellow"></div>
-            </div>
-            <div class="red"></div>
-            <div class="blue"></div>
-            <div class="black"></div>
-            <div></div><!-- white -->
-            <div class="chocolate"></div>
-        </div>
+    <div id="userChoice">
         <div id="container">
             <header>
                 <h1 id="big">Archery score</h1>
             </header>
 
-            <section class="modal" id="number">
+            <section class="modal"  id="number">
                 <span>Nombre de volet</span>
                 <a href="session/guest.html">10</a>
                 <a href="session/guest.html">20</a>
             </section>
-
         </div>
+    </div>
+    <main>
+        <div class="fullScreen">
+            <section class="modal">
+                <div>Volet n° <span id="turn"></span></div>
+
+                <div class="result">
+                    <p>volet n° <span id="flyNbr">0</span></p>
+                    <p><span id="point"></span></p>
+                    <p><span id="final"></span></p>
+
+                </div>
+                <footer>
+<!--                    <a href="guest.html"><i class="fas fa-undo-alt"></i></a>-->
+
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </footer>
+            </section>
+        </div>
+
+        <section class="target">
+            <div class="chocolate">0</div>
+            <div class="white">1</div>
+            <div class="white">2</div>
+            <div id="three" class="black">3</div>
+            <div class="black">4</div>
+            <div class="blue">5</div>
+            <div class="blue">6</div>
+            <div class="red">7</div>
+            <div class="red">8</div>
+            <div class="yellow">9</div>
+            <div id="ten" class="yellow">
+                <span>10</span>
+                <span>10</span>
+            </div>
+            <div id="plus">+</div>
+
+        </section>
     </main>
     <script src="app.js"></script>
 </body>
