home modal window

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 
 </head>
 <body>
-    <div id="userChoice">
-        <div id="container">
+<!-- first modal window to get user choice -->
+    <div id="homeScreen">
+        <section class="modal"  id="number">
             <header>
                 <h1 id="big">Archery score</h1>
             </header>
-
-            <section class="modal"  id="number">
-                <span>Nombre de volet</span>
-                <a href="session/guest.html">10</a>
-                <a href="session/guest.html">20</a>
-            </section>
-        </div>
+            <p>Nombre de volet</p>
+            <span>10</span>
+            <span>20</span>
+        </section>
     </div>
+
     <main>
+        <!-- modal window to display score -->
         <div class="fullScreen">
             <section class="modal">
                 <div>Volet n° <span id="turn"></span></div>
