--- a/index.html
+++ b/index.html
@@ -26,17 +26,12 @@
         <!-- modal window to display score -->
         <div class="fullScreen">
             <section class="modal">
-                <div>Volet n° <span id="turn"></span></div>
-
+                <p>volet n° <span id="flyNbr">N°</span></p>
                 <div class="result">
-                    <p>volet n° <span id="flyNbr">0</span></p>
-                    <p><span id="point"></span></p>
-                    <p><span id="final"></span></p>
-
+                    <p><span id="point">pt</span></p>
+                    <p><span id="final">total</span></p>
                 </div>
                 <footer>
-<!--                    <a href="guest.html"><i class="fas fa-undo-alt"></i></a>-->
-
                     <i class="fas fa-long-arrow-alt-right"></i>
                 </footer>
             </section>
