--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <h1 id="big">Archery score</h1>
             </header>
             <p>Nombre de volet</p>
+            <span>5</span>
             <span>10</span>
             <span>20</span>
         </section>
@@ -26,7 +27,7 @@
         <!-- modal window to display score -->
         <div class="fullScreen">
             <section class="modal">
-                <p>volet n° <span id="flyNbr">N°</span></p>
+                <p>volet n° <span id="flyNbr"></span></p>
                 <div class="result">
                     <p><span id="point">pt</span></p>
                     <p><span id="final">total</span></p>
