setting display intermediate score

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 
     <main>
         <!-- modal window to display score -->
-        <div class="fullScreen">
+        <div id="fullScreen">
             <section class="modal">
                 <p>volet n° <span id="flyNbr"></span></p>
                 <div class="result">
                     <p><span id="point">pt</span></p>
-                    <p><span id="final">total</span></p>
+                </div>
+                <div id="endScreen">
+                    <p><span id="final"></span></p>
                 </div>
                 <footer>
                     <i class="fas fa-long-arrow-alt-right"></i>
