--- a/guest.html
+++ b/guest.html
@@ -2,57 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mode invité</title>
+    <title>Archery score</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="img/minTarget.png" />
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <div class="background">
-        <div class="yellow">
-            <div id="halfYellow"></div>
-        </div>
-        <div class="red"></div>
-        <div class="blue"></div>
-        <div class="black"></div>
-        <div></div><!-- white -->
-        <div class="chocolate"></div>
-    </div>
-
-    <div class="modal">
-        <div id="number">
-            <header>
-                <h2>Volet n° 8 sur 20</h2>
-            </header>
-            <section class="result">
-                <span>f1</span>
-                <span>f2</span>
-                <span>f3</span>
-                <span id="point">f1 + f2 + f3</span>
-                <span>total : </span>
-            </section>
-        </div>
-    </div>
-
-    <section id="blazon" class="target">
-        <div id="plus" class="yellow">+</div><!-- + -->
-        <div id="ten" class="yellow">10</div><!-- 10 -->
-        <div id="nine" class="yellow">9</div><!-- 9 -->
-        <div id="eight" class="red">8</div><!-- 8 -->
-        <div id="seven" class="red">7</div><!-- 7 -->
-        <div id="six" class="blue">6</div><!-- 6 -->
-        <div id="five" class="blue">5</div><!-- 5 -->
-        <div id="four" class="black">4</div><!-- 4 -->
-        <div id="three" class="black">3</div><!-- 3 -->
-        <div id="two" class="white">2</div><!-- 2 -->
-        <div id="one" class="white">1</div><!-- 1 -->
-        <div id="straw" class="chocolate">0</div><!-- 0 -->
+<!-- first modal window to get user choice -->
+<div id="homeScreen">
+    <section class="modal"  id="number">
+        <header>
+            <h1 id="big">Archery score</h1>
+        </header>
+        <p>Nombre de volet</p>
+        <span>5</span>
+        <span>10</span>
+        <span>20</span>
     </section>
-    <footer>
-        <a href="index.html">
-            <i class="fas fa-long-arrow-alt-left"></i>
-        </a>
-    </footer>
+</div>
+
+<main>
+    <!-- modal window to display score -->
+    <div id="fullScreen">
+        <section class="modal">
+            <p>volet n° <span id="flyNbr"></span></p>
+            <div class="result">
+                <p><span id="point">pt</span></p>
+            </div>
+            <div id="endScreen">
+                <p><span id="final"></span></p>
+            </div>
+            <footer>
+                <i class="fas fa-long-arrow-alt-right"></i>
+            </footer>
+        </section>
+    </div>
+
+    <section class="target">
+        <div class="chocolate">0</div>
+        <div class="white">1</div>
+        <div class="white">2</div>
+        <div id="three" class="black">3</div>
+        <div class="black">4</div>
+        <div class="blue">5</div>
+        <div class="blue">6</div>
+        <div class="red">7</div>
+        <div class="red">8</div>
+        <div class="yellow">9</div>
+        <div id="ten" class="yellow">
+            <span>10</span>
+            <span>10</span>
+        </div>
+        <div id="plus">+</div>
+
+    </section>
+</main>
+<script src="app.js"></script>
 </body>
 </html>
