--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <a href="connexion/signIn.html">Inscription</a>
         <a href="guest.html">Mode invité</a>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
