set css from guest

--- a/guest.html
+++ b/guest.html
@@ -28,9 +28,13 @@
     <div id="fullScreen">
         <section class="modal">
             <p>volet n° <span id="flyNbr"></span></p>
-            <div class="result">
-                <p><span id="point">pt</span></p>
+
+            <div>
+                <p class="result" id="firstArrow"><span class="point">pt</span></p>
+                <p class="result" id="secondArrow"><span class="point">pt</span></p>
+                <p class="result" id="thirdArrow"><span class="point">pt</span></p>
             </div>
+
             <div id="endScreen">
                 <p><span id="final"></span></p>
             </div>
