suppr result create class=point in css & js

--- a/guest.html
+++ b/guest.html
@@ -30,9 +30,9 @@
             <p>volet n° <span id="flyNbr"></span></p>
 
             <div>
-                <p class="result" id="firstArrow"><span class="point">pt</span></p>
-                <p class="result" id="secondArrow"><span class="point">pt</span></p>
-                <p class="result" id="thirdArrow"><span class="point">pt</span></p>
+                <p id="firstArrow"><span class="point">pt</span></p>
+                <p id="secondArrow"><span class="point">pt</span></p>
+                <p id="thirdArrow"><span class="point">pt</span></p>
             </div>
 
             <div id="endScreen">
