do other result contain point

--- a/guest.html
+++ b/guest.html
@@ -28,19 +28,15 @@
     <div id="fullScreen">
         <section class="modal">
             <p>volet n° <span id="flyNbr"></span></p>
-
-            <div>
+            <div id="result">
                 <p id="firstArrow"><span class="point">pt</span></p>
                 <p id="secondArrow"><span class="point">pt</span></p>
                 <p id="thirdArrow"><span class="point">pt</span></p>
             </div>
-
             <div id="endScreen">
-                <p><span id="final"></span></p>
+                <p><span id="final">xxx</span></p>
             </div>
-            <footer>
-                <i class="fas fa-long-arrow-alt-right"></i>
-            </footer>
+            <i class="fas fa-long-arrow-alt-right"></i>
         </section>
     </div>
 
