--- a/guest.html
+++ b/guest.html
@@ -14,11 +14,10 @@
 <div id="homeScreen">
     <section class="modal"  id="number">
         <header>
-            <h1 id="big">Archery score</h1>
+            <h1 id="big">Nombre de volet</h1>
         </header>
-        <p>Nombre de volet</p>
         <span>5</span>
-        <span>10</span>
+<!--        <span>10</span>-->
         <span>20</span>
     </section>
 </div>
@@ -43,7 +42,7 @@
         <div class="chocolate">0</div>
         <div class="white">1</div>
         <div class="white">2</div>
-        <div id="three" class="black">3</div>
+        <div class="black" id="three">3</div>
         <div class="black">4</div>
         <div class="blue">5</div>
         <div class="blue">6</div>
