--- a/guest.html
+++ b/guest.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="img/minTarget.png" />
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
 <!-- first modal window to get user choice -->
@@ -26,7 +25,7 @@
     <!-- modal window to display score -->
     <div id="fullScreen">
         <section class="modal">
-            <p>volet n° <span id="flyNbr"></span></p>
+            <p>volet n° <span id="textFlyNbr"></span></p>
             <div id="result">
                 <p id="firstArrow"><span class="point">pt</span></p>
                 <p id="secondArrow"><span class="point">pt</span></p>
