create volley score div

--- a/guest.html
+++ b/guest.html
@@ -9,21 +9,12 @@
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<!-- first modal window to get user choice -->
-<div id="homeScreen">
-    <section class="modal"  id="number">
-        <h1 id="big">Nombre de volet</h1>
-        <span>5</span>
-<!--        <span>10</span>-->
-        <span>20</span>
-    </section>
-</div>
 
 <main>
-    <!-- modal window to display score -->
+    <!-- section to display score -->
     <div id="fullScreen">
-        <section class="modal">
-            <p>volet n° <span id="textFlyNbr"></span></p>
+        <section>
+            <p>volet n° <span id="currentVolley"></span></p>
             <div id="result">
                 <p id="firstArrow"><span class="point">pt</span></p>
                 <p id="secondArrow"><span class="point">pt</span></p>
