display arrow, volley, total score & 10+ number

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Archery score</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="img/minTarget.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/min_target.png" />
     <script src="https://kit.fontawesome.com/b3c591f1b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -45,9 +45,7 @@
                     </select>
                 </div>
                 <a href="#" class="next">
-                    <?php
-                        include "blason.php";
-                    ?>
+                    <img class="btn" src="img/target.png" alt="mini cible">
                 </a>
             </div>
         </section>
@@ -65,9 +63,7 @@
                 </div>
                 <a href="#" id="back">back</a>
                 <a href="#" class="next">
-                    <?php
-                    include "blason.php";
-                    ?>
+                    <img class="btn" src="img/target.png" alt="mini cible">
                 </a>
             </div>
         </section>
