gestion de l'overflow

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <section id="finalResult">
             <div>
                 <h2>Score</h2>
-    <!--         table of score       -->
+                <div id="tablePlace">
+                    <!--         table of score       -->
+                </div>
             </div>
         </section>
     </main>
