--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="plus">+</div>
         </section>
 
-        <section id="switch">
+        <section id="choice">
             <div id="home">
                 <div>
                     <span>Bienvenue sur</span>
@@ -53,9 +53,9 @@
             <div id="arrow">
                 <h2>Volée n° <span>0</span></h2>
                 <div>
-                    <span>a1</span>
-                    <span>a2</span>
-                    <span>a3</span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
                 <div id="currentScore">
                     <span>total</span>
